turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:20: error: type mismatch;
 found   : Array[Int]
 required: Int
	state = rule(state)(couleurActuelle)
                           ^