turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
    var state = 0;

    def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {

    def changerCouleur(c:Color) ={
		setCouleurBrosse(c)
		baisseBrosse
		leveBrosse
	}

	var couleurActuelle = 0
	while (getCouleurSol != colors(couleurActuelle)) couleurActuelle+=1
	if (couleurActuelle != colors.length-1) changerCouleur(colors(couleurActuelle+1))
	else changerCouleur(colors(0))
	if (rule(state)(couleurActuelle)(0) == 0) recule
	if (rule(state)(couleurActuelle)(1) == 2) gauche
	if (rule(state)(couleurActuelle)(1) == 4) retourne
	if (rule(state)(couleurActuelle)(1) == 8) droite
	state = rule(state)(couleurActuelle)
	avance
    }
